new fixed header for mobile view, new mobile landing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <div class="wrapper">
 
     <!-- <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
-    <div class="header-flexbox-parent">
+  <div class="header-flexbox-parent">
 
-      <div class="header-flexbox-item">
+    <div class="header-flexbox-item">
         <a class="site-title" href="{{ site.baseurl }}/"><img class="header-logo" src="images/logo_rot.png"/></a>
       </div>
 
@@ -35,5 +35,32 @@
       </div>
     </div>
   </div>
+
+
+    <div class="mobile-nav">
+
+
+      <div class="mobile-nav-flexbox-parent">
+
+        <div class="mobile-nav-flexbox-item">
+          <a class ="mobile-nav-anfahrt" href="/*anfahrt"> <i class="fa fa-map-marker"></i>
+					  <span class="mobile-nav-text"><br>Anfahrt</span>
+			    </a>
+        </div>
+
+        <div class="mobile-nav-flexbox-item">
+            <a class="mobile-nav-opening" href="/#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
+              <span class="mobile-nav-text"><br>Öffnungszeiten</span>
+            </a>
+        </div>
+
+        <div class="mobile-nav-flexbox-item">
+          <a class = "mobile-nav-phone" href="tel:07532086364"> <i class="fa fa-phone"></i>
+					       <span class="mobile-nav-text"><br>Anruf</span>
+			    </a>
+        </div>
+      </div>
+    </div>
+
 
 </header>
