--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -1,13 +1,12 @@
 <div id="landing_page">
 
-
   <video class="landing-video" poster="images/Cover2.png" autoplay="true" muted>
     <source src="videos/Landing_video_short.mp4" type="video/mp4">
     <source src="videos/Landing_video_short.webm" type="video/webm">
   </video>
 
   <div class="background-mobile">
-    <img class="bottom-image" src="images/Cover2.png"/>
+    <img class="backgroun-mobile-image" src="images/Cover2.png"/>
   </div>
 
   <div class="chevron-flexbox-parent">
