--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="mobile-nav-flexbox-item">
-          <a class = "mobile-nav-phone" href="tel:07532086364"> <i class="fa fa-phone"></i>
+          <a class = "mobile-nav-phone" href= {{ site.phone }} > <i class="fa fa-phone"></i>
 					       <span class="mobile-nav-text"><br>Anruf</span>
 			    </a>
         </div>
