changed mobile header

--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -6,7 +6,7 @@
   </video>
 
   <div class="background-mobile">
-    <img class="backgroun-mobile-image" src="images/Cover2.png"/>
+    <img class="backgroun-mobile-image" src="images/Cover2_logo_weiss.png"/>
   </div>
 
   <div class="chevron-flexbox-parent">
