--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -62,27 +62,8 @@
 @media screen and (max-width: $on-palm) {
 
   .site-header {
-    //border: 1px solid green;
-    width: 100vw;
+    visibility: hidden;
   }
-
-  .header-flexbox-parent{
-    //border: 1px solid red;
-    max-width: 230px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .header-flexbox-item {
-    //border: 1px solid purple;
-  }
-  .header-logo {
-      width: 220px;
-      margin-left: 0;
-      padding-left: 0;
-      margin-right: auto;
-
-    }
 
   .mobile-nav{
     visibility: visible;
@@ -102,7 +83,7 @@
 
   .mobile-nav-flexbox-item{
     background-color: $grey-color-dark;
-    border: 1px solid white;
+    border: 1px solid $grey-color-light;
     flex-grow: 1;
     text-align: center;
     padding: 5px;
@@ -286,7 +267,9 @@
     position: relative;
     background-color: rgba(250,250,250,0.7);
     bottom: 0;
-    width: 100vw;
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 0;
     padding-right: 0;
     padding-top: 15px;
@@ -321,6 +304,8 @@
 
 .oeffnungszeiten-flexbox-parent {
   //border: 5px solid blue;
+  padding: 0;
+  max-width: 80vh;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -329,25 +314,27 @@
 }
 
 .overlay-text {
-  width: 350px;
+  width: 380px;
   position: relative;
   z-index: 2;
   background: rgba(250,250,250,1);
   padding-top: 30px;
   padding-bottom: 20px;
-  //padding-left: 15px;
-  //padding-right: 45px;
-  font-size: 20px;
 
 }
 
 .overlay-text-list {
+  font-size: 22px;
   list-style: none;
 }
+
 @media screen and (max-width: $on-palm) {
   #oeffnungszeiten{
     padding-top: 5px;
     padding-bottom: 10px;
+  }
+  .overlay-text {
+    width: 340px;
   }
 }
 
@@ -394,7 +381,7 @@
 
 .uns-flexbox-item {
   width: 250px;
-  font-size: 16px;
+  font-size: 17px;
   margin: 10px;
 
 }
@@ -425,12 +412,14 @@
     max-width: 250px;
     margin-left: auto;
     margin-right: auto;
+  }
 
+  .round-picture:hover {
+    opacity: 1;
   }
 
   .uns-flexbox-item {
     width: auto;
-    font-size: 16px;
     margin: 10px;
   }
 }
@@ -536,6 +525,15 @@
 
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
+  #gallery{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+  }
+
+  .gallery-flexbox-item:nth-child(6) {
+    display: none;
+  }
   .gallery-flexbox-item:nth-child(7) {
     display: none;
   }
@@ -545,6 +543,36 @@
   .gallery-flexbox-item:nth-child(9) {
     display: none;
   }
+  .gallery-flexbox-item{
+    border: 5px solid blue;
+    margin: 0;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+  }
+
+  .galleryimage {
+  	width: auto;
+    z-index: 1;
+    padding: 0;
+  	transform: translate3d(0, 0, 0);
+  }
+
+  .gallery-image-title {
+    width: 400px;
+    z-index: 2;
+  	bottom: 0;
+  	margin: 0;
+  	padding: 1em;
+  	color: white;
+  	font-size: 1.2em;
+  	line-height: 1;
+    transform: translate3d(3%,-100%, 0);
+  }
+
+
+
+
 }
 /**
  * Site footer
@@ -606,6 +634,10 @@
 
 
 @include media-query($on-palm) {
+    .site-footer {
+      padding-bottom: 100px;
+    }
+
     .footer-flexbox-parent {
       display: flex;
       flex-direction: column;
@@ -624,7 +656,7 @@
 }
 
 .page-heading {
-    font-size: 64px;
+    font-size: 48px;
     color: $green-color;
 
 }
