--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -265,9 +265,9 @@
   .chevron-flexbox-parent {
     //border: 1px solid lightgreen;
     position: relative;
-    background-color: rgba(250,250,250,0.7);
+    background-color: rgba(250,250,250,1);
     bottom: 0;
-    width: 90vw;
+    width: 100vw;
     margin-left: auto;
     margin-right: auto;
     padding-left: 0;
@@ -318,19 +318,19 @@
   position: relative;
   z-index: 2;
   background: rgba(250,250,250,1);
-  padding-top: 30px;
+  padding-top: 10px;
   padding-bottom: 20px;
 
 }
 
 .overlay-text-list {
-  font-size: 22px;
+  font-size: 20px;
   list-style: none;
 }
 
 @media screen and (max-width: $on-palm) {
   #oeffnungszeiten{
-    padding-top: 5px;
+    padding-top: 0;
     padding-bottom: 10px;
   }
   .overlay-text {
