all borders and small mobile nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,7 @@
 
         <div class="mobile-nav-flexbox-item">
             <a class="mobile-nav-opening" href="/#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
-              <span class="mobile-nav-text"><br>Öffnungszeiten</span>
+              <span class="mobile-nav-text"><br>zeiten</span>
             </a>
         </div>
 
