--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,6 +2,7 @@
  * Site header
  */
 .site-header {
+    border: 2px solid lightblue;
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 5px solid red;
     margin: 0;
@@ -15,6 +16,7 @@
 }
 
 .site-title {
+    border: 2px solid lightblue;
     position: relative;
     z-index: 2;
     //font-size: 26px;
@@ -30,14 +32,17 @@
 }
 
 .header-logo {
+  border: 2px solid lightblue;
   width: 300px;
 
 }
 .mobile-nav{
+  border: 2px solid lightblue;
   visibility: hidden;
 }
 
 .site-nav {
+    border: 2px solid lightblue;
     position: relative;
     z-index: 2;
     float: right;
@@ -62,6 +67,7 @@
 @media screen and (max-width: $on-palm) {
 
   .site-header {
+    border: 2px solid lightblue;
     visibility: hidden;
   }
 
@@ -71,7 +77,7 @@
     position: fixed;
     bottom: 0;
     z-index: 3;
-    width: 100%;
+    width: 80vw;
   }
 
   .mobile-nav-flexbox-parent{
@@ -83,17 +89,18 @@
   }
 
   .mobile-nav-flexbox-item{
+    border: 2px solid lightblue;
     background-color: $grey-color-dark;
     border: 1px solid $grey-color-light;
     flex-grow: 1;
     flex-shrink: 1;
     text-align: center;
-    padding: 1vw;
-    font-size: 18px;
-    font-size: 6vw;
+    font-size: 16px;
+    font-size: 5vw;
 
   }
   .site-nav {
+    border: 2px solid lightblue;
     visibility: hidden;
     //position: left;
     //top: 9px;
@@ -145,6 +152,7 @@
  */
 
 #landing_page{
+  border: 2px solid lightblue;
   margin: 0;
   padding: 0;
   border: 0;
@@ -154,10 +162,12 @@
 }
 
 .landing-video-box{
+  border: 2px solid lightblue;
   overflow: hidden;
 }
 
 .landing-video {
+  border: 2px solid lightblue;
    /*position: absolute; for making landing video scrollable */
   position: fixed; /*for making landing video fixed and pages move over it*/
   top: 50%;
@@ -172,7 +182,7 @@
 }
 
 .header-flexbox-parent {
-  //border: 5px solid lightblue;
+  border: 5px solid lightblue;
   position: absolute;
   margin-top: 20px;
   margin-left: 20px;
@@ -190,7 +200,7 @@
 }
 
 .video-flexbox-parent {
-  //border: 5px solid lightgreen;
+  border: 5px solid lightgreen;
   position: absolute;
   margin-top: 200px;
   margin-left: 20px;
@@ -210,7 +220,7 @@
 }
 
 .chevron-flexbox-parent {
-  //border: 5px solid lightgreen;
+  border: 5px solid lightgreen;
   position: absolute;
   bottom: 0;
   width: 90%;
@@ -230,11 +240,13 @@
 
 .background-mobile {
   visibility: hidden;
+  border: 2px solid lightblue;
 }
 
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #landing_page{
+    border: 2px solid lightblue;
     width: 100vw;
     height: auto;
   }
@@ -246,6 +258,7 @@
   }
 
   .landing-video{
+    border: 2px solid lightblue;
     display: none;
   }
 
@@ -261,6 +274,7 @@
   }
 
   .background-mobile-image {
+    border: 2px solid lightblue;
     visibility: visible;
     height: auto;
     width: auto;
@@ -292,7 +306,7 @@
  */
 
  #oeffnungszeiten{
-   //border: 5px solid red;
+   border: 5px solid red;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -307,8 +321,7 @@
 }
 
 .oeffnungszeiten-flexbox-parent {
-  //border: 5px solid blue;
-  padding: 0;
+  border: 5px solid blue;
   max-width: 80vh;
   margin-left: auto;
   margin-right: auto;
@@ -318,16 +331,18 @@
 }
 
 .overlay-text {
+  border: 2px solid lightblue;
   width: 380px;
   position: relative;
   z-index: 2;
   background: rgba(250,250,250,1);
-  padding-top: 10px;
+  padding-top: 40px;
   padding-bottom: 20px;
 
 }
 
 .overlay-text-list {
+  border: 2px solid lightblue;
   font-size: 20px;
   list-style: none;
 }
@@ -339,9 +354,11 @@
     padding-bottom: 10px;
   }
   .overlay-text {
+    border: 2px solid lightblue;
     width: 340px;
   }
   .overlay-text-list {
+    border: 2px solid lightblue;
     font-size: 20px;
     font-size: 4vw;
     list-style: none;
@@ -353,6 +370,7 @@
  */
 
  #ueberuns{
+   border: 2px solid lightblue;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -367,14 +385,14 @@
 }
 
 .page-heading{
-  //border: 5px solid green;
+  border: 5px solid green;
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
 }
 
 .uns-flexbox-parent {
-  //border: 5px solid green;
+  border: 5px solid green;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -390,6 +408,7 @@
 }
 
 .uns-flexbox-item {
+  border: 2px solid lightblue;
   width: 250px;
   font-size: 17px;
   margin: 10px;
@@ -466,7 +485,7 @@
  */
 
 #gallery{
-  //border: 5px solid blue;
+  border: 2px solid lightblue;
   height: auto;
   padding-top: 50px;
   padding-bottom: 80px;
@@ -478,7 +497,7 @@
 }
 
 .gallery-flexbox-parent {
-  //border: 5px solid red;
+  border: 5px solid red;
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
@@ -488,7 +507,7 @@
 }
 
 .gallery-flexbox-item{
-  //border: 5px solid blue;
+  border: 5px solid blue;
   width: 480px;
   height: 270px;
   margin: 10px;
@@ -497,7 +516,8 @@
 }
 
 .galleryimage {
-	width: auto;
+	border: 2px solid lightblue;
+  width: auto;
   z-index: 1;
 
 	transform: translate3d(0, 0, 0) scale3d(1.3, 1.3, 1);
@@ -508,6 +528,7 @@
 }
 
 .gallery-image-title {
+  border: 2px solid lightblue;
   width: 400px;
   z-index: 2;
 	bottom: 0;
@@ -537,6 +558,7 @@
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #gallery{
+    border: 2px solid lightblue;
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: white;
@@ -563,13 +585,15 @@
   }
 
   .galleryimage {
-  	width: auto;
+  	border: 2px solid lightblue;
+    width: auto;
     z-index: 1;
     padding: 0;
   	transform: translate3d(0, 0, 0);
   }
 
   .gallery-image-title {
+    border: 2px solid lightblue;
     width: 400px;
     z-index: 2;
   	bottom: 0;
@@ -590,6 +614,7 @@
  */
 
 .site-footer {
+  border: 2px solid lightblue;
   padding-bottom: 20px;
   background-color: white;
   border-top: 3px solid $green-color;
