changed floating footer links

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,9 @@ body {
     font-size: $base-font-size;
     line-height: $base-line-height;
     font-weight: 300;
+    margin-left: 0;
+    margin-right: 0;
+    min-width: 100%;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
