--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,19 +43,19 @@
       <div class="mobile-nav-flexbox-parent">
 
         <div class="mobile-nav-flexbox-item">
-          <a class ="mobile-nav-anfahrt" href="/*kontakt"> <i class="fa fa-map-marker"></i>
+          <a class ="mobile-nav-anfahrt" href="/il-gusto/*kontakt"> <i class="fa fa-map-marker"></i>
 					  <span class="mobile-nav-text"><br>Anfahrt</span>
 			    </a>
         </div>
 
         <div class="mobile-nav-flexbox-item">
-            <a class="mobile-nav-opening" href="/#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
-              <span class="mobile-nav-text"><br>zeiten</span>
+            <a class="mobile-nav-opening" href="/il-gusto/#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
+              <span class="mobile-nav-text"><br>Öffnungs-<br>zeiten</span>
             </a>
         </div>
 
         <div class="mobile-nav-flexbox-item">
-          <a class = "mobile-nav-phone" href= {{ site.phone }} > <i class="fa fa-phone"></i>
+          <a class = "mobile-nav-phone" href={{ site.phone }}><i class="fa fa-phone"></i>
 					       <span class="mobile-nav-text"><br>Anruf</span>
 			    </a>
         </div>
