--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -94,6 +94,7 @@
     border: 1px solid $grey-color-light;
     flex-grow: 1;
     flex-shrink: 1;
+    height: 100%;
     text-align: center;
     font-size: 16px;
     font-size: 5vw;
@@ -656,7 +657,6 @@
 }
 
 .footer-flexbox-item:nth-child(1) {
-  //margin: 10px;
   max-width: 200px;
   align-self: flex-start;
 
