screen width issue fixed

--- a/_includes/landing_page.html
+++ b/_includes/landing_page.html
@@ -6,7 +6,7 @@
   </video>
 
   <div class="background-mobile">
-    <img class="backgroun-mobile-image" src="images/Cover2_logo_weiss.png"/>
+    <a href="{{ site.baseurl }}/"><img class="background-mobile-image" src="images/Cover2_logo_weiss.png"/></a>
   </div>
 
   <div class="chevron-flexbox-parent">
