--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,9 +2,7 @@
  * Site header
  */
 .site-header {
-    border: 2px solid lightblue;
-    // border-top: 5px solid $grey-color-dark;
-    // border-bottom: 5px solid red;
+    //border: 2px solid lightblue;
     margin: 0;
     padding: 0;
     width: auto;
@@ -16,7 +14,7 @@
 }
 
 .site-title {
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     position: relative;
     z-index: 2;
     //font-size: 26px;
@@ -32,17 +30,17 @@
 }
 
 .header-logo {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   width: 300px;
 
 }
 .mobile-nav{
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   visibility: hidden;
 }
 
 .site-nav {
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     position: relative;
     z-index: 2;
     float: right;
@@ -67,29 +65,45 @@
 @media screen and (max-width: $on-palm) {
 
   .site-header {
-    border: 2px solid lightblue;
-    visibility: hidden;
+    //border: 2px solid lightblue;
+    max-width: 80%;
+  }
+
+  .header-flexbox-parent{
+    display: none;
+    max-width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+  .header-flexbox-item{
+    display: none;
+    border: 3px solid blue;
+
+  }
+  .site-title{
+    display: none;
+    width: 80px;
   }
 
   .mobile-nav{
     visibility: visible;
-    border: 2px solid green;
+    //border: 2px solid green;
     position: fixed;
     bottom: 0;
     z-index: 3;
-    width: 80vw;
+    width: 100vw;
   }
 
   .mobile-nav-flexbox-parent{
-    border: 1px solid blue;
+    //border: 1px solid blue;
     display: flex;
     flex-direction: row;
     align-items: center
-
   }
 
   .mobile-nav-flexbox-item{
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     background-color: $grey-color-dark;
     border: 1px solid $grey-color-light;
     flex-grow: 1;
@@ -100,16 +114,12 @@
     font-size: 5vw;
 
   }
-  .site-nav {
-    border: 2px solid lightblue;
-    visibility: hidden;
-    //position: left;
-    //top: 9px;
-    //right: 30px;
-    //background-color: $background-color;
-    //border: 1px solid white;
+
+
+  .site-nav-if-ever-needed {
+    //border: 2px solid red;
     border-radius: 5px;
-    text-align: right;
+    text-align: center;
 
       .menu-icon {
           display: block;
@@ -153,7 +163,7 @@
  */
 
 #landing_page{
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   margin: 0;
   padding: 0;
   border: 0;
@@ -163,12 +173,12 @@
 }
 
 .landing-video-box{
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   overflow: hidden;
 }
 
 .landing-video {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
    /*position: absolute; for making landing video scrollable */
   position: fixed; /*for making landing video fixed and pages move over it*/
   top: 50%;
@@ -183,7 +193,7 @@
 }
 
 .header-flexbox-parent {
-  border: 5px solid lightblue;
+  //border: 5px solid lightblue;
   position: absolute;
   margin-top: 20px;
   margin-left: 20px;
@@ -201,7 +211,7 @@
 }
 
 .video-flexbox-parent {
-  border: 5px solid lightgreen;
+  //border: 5px solid lightgreen;
   position: absolute;
   margin-top: 200px;
   margin-left: 20px;
@@ -221,7 +231,7 @@
 }
 
 .chevron-flexbox-parent {
-  border: 5px solid lightgreen;
+  //border: 5px solid lightgreen;
   position: absolute;
   bottom: 0;
   width: 90%;
@@ -241,25 +251,25 @@
 
 .background-mobile {
   visibility: hidden;
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
 }
 
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #landing_page{
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     width: 100vw;
     height: auto;
   }
 
   .video-flexbox-parent {
-    border: 5px solid red;
+    //border: 5px solid red;
     position: absolute;
     margin-top: 200px;
   }
 
   .landing-video{
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     display: none;
   }
 
@@ -271,18 +281,18 @@
 
   .background-mobile {
     visibility: visible;
-    border: 2px solid blue;
+    //border: 2px solid blue;
   }
 
   .background-mobile-image {
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     visibility: visible;
     height: auto;
     width: auto;
   }
 
   .chevron-flexbox-parent {
-    border: 1px solid lightgreen;
+    //border: 1px solid lightgreen;
     position: relative;
     background-color: rgba(250,250,250,1);
     bottom: 0;
@@ -307,7 +317,7 @@
  */
 
  #oeffnungszeiten{
-   border: 5px solid red;
+   //border: 5px solid red;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -322,7 +332,7 @@
 }
 
 .oeffnungszeiten-flexbox-parent {
-  border: 5px solid blue;
+  //border: 5px solid blue;
   max-width: 80vh;
   margin-left: auto;
   margin-right: auto;
@@ -332,7 +342,7 @@
 }
 
 .overlay-text {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   width: 380px;
   position: relative;
   z-index: 2;
@@ -343,23 +353,23 @@
 }
 
 .overlay-text-list {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   font-size: 20px;
   list-style: none;
 }
 
 @media screen and (max-width: $on-palm) {
   #oeffnungszeiten{
-    border: 1px solid purple;
+    //border: 1px solid purple;
     padding-top: 0;
     padding-bottom: 10px;
   }
   .overlay-text {
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     width: 340px;
   }
   .overlay-text-list {
-    border: 2px solid lightblue;
+    //border: 2px solid lightblue;
     font-size: 20px;
     font-size: 4vw;
     list-style: none;
@@ -371,7 +381,7 @@
  */
 
  #ueberuns{
-   border: 2px solid lightblue;
+   //border: 2px solid lightblue;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
@@ -386,14 +396,14 @@
 }
 
 .page-heading{
-  border: 5px solid green;
+  //border: 5px solid green;
   margin-left: auto;
   margin-right: auto;
   max-width: 1000px;
 }
 
 .uns-flexbox-parent {
-  border: 5px solid green;
+  //border: 5px solid green;
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -409,7 +419,7 @@
 }
 
 .uns-flexbox-item {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   width: 250px;
   font-size: 17px;
   margin: 10px;
@@ -431,12 +441,12 @@
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #ueberuns{
-    border: 1px solid green;
+    //border: 1px solid green;
     height: auto;
   }
 
   .uns-flexbox-parent {
-    border: 1px solid red;
+    //border: 1px solid red;
   }
 
   .round-picture {
@@ -615,7 +625,7 @@
  */
 
 .site-footer {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   padding-bottom: 20px;
   background-color: white;
   border-top: 3px solid $green-color;
