--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
       <div class="mobile-nav-flexbox-parent">
 
         <div class="mobile-nav-flexbox-item">
-          <a class ="mobile-nav-anfahrt" href="/il-gusto/*kontakt"> <i class="fa fa-map-marker"></i>
+          <a class ="mobile-nav-anfahrt" href="#kontakt"> <i class="fa fa-map-marker"></i>
 					  <span class="mobile-nav-text"><br>Anfahrt</span>
 			    </a>
         </div>
