testing anruf button

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,13 +45,13 @@
         </div>
 
         <div class="mobile-nav-flexbox-item">
-            <a class="mobile-nav-opening" href="/il-gusto/#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
+            <a class="mobile-nav-opening" href="#oeffnungszeiten"> <i class="fa fa-shopping-basket "></i>
               <span class="mobile-nav-text"><br>Öffnungs-<br>zeiten</span>
             </a>
         </div>
 
         <div class="mobile-nav-flexbox-item">
-          <a class = "mobile-nav-phone" href={{ site.phone }}><i class="fa fa-phone"></i>
+          <a class = "mobile-nav-phone" href="tel:{{ site.phone }}"><i class="fa fa-phone"></i>
 					       <span class="mobile-nav-text"><br>Anruf</span>
 			    </a>
         </div>
