--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,26 +93,43 @@
     bottom: 0;
     z-index: 3;
     width: 100vw;
+    height: auto;
   }
 
   .mobile-nav-flexbox-parent{
     //border: 1px solid blue;
+    height: auto;
     display: flex;
     flex-direction: row;
-    align-items: center
   }
 
   .mobile-nav-flexbox-item{
     //border: 2px solid lightblue;
+    padding-top: 3px;
+    padding-bottom: 3px;
     background-color: $grey-color-dark;
     border: 1px solid $grey-color-light;
     flex-grow: 1;
     flex-shrink: 1;
-    height: 100%;
+    display: flex;
+    align-items: top;
+    justify-content: center;
     text-align: center;
-    font-size: 16px;
+    font-size: 12px;
     font-size: 5vw;
 
+    &:hover {
+        text-decoration: none;
+        background-color: $brand-color;
+      }
+
+    .mobile-nav-link{
+      color: white;
+
+      &:hover {
+          text-decoration: none;
+    }
+  }
   }
 
 
