added disclaimer and biotop logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,12 +54,26 @@
         </div>
       </div>
 
-      <div class="image_container">
-        <a href="https://www.google.at/maps/place/Il+Gusto/@46.5922111,14.0174463,17z/data=!4m7!1m4!3m3!1s0x477078af0747afeb:0x83a247888773d752!2sMautweg+7,+9232+Rosegg!3b1!3m1!1s0x477078af06f0728f:0x8452d9ac2dc6edc9?hl=en">
-          <img class="map_image" src="images/map_long.png">
-        </a>
-      </div>
-
     </div>
+  </div>
+
+  <div class="map_image_container">
+    <a href="https://www.google.at/maps/place/Il+Gusto/@46.5922111,14.0174463,17z/data=!4m7!1m4!3m3!1s0x477078af0747afeb:0x83a247888773d752!2sMautweg+7,+9232+Rosegg!3b1!3m1!1s0x477078af06f0728f:0x8452d9ac2dc6edc9?hl=en">
+      <img class="map_image" src="images/map_long.png">
+    </a>
+  </div>
+
+  <div class="impressum-wrapper">
+
+    <a class="disclaimer-link" href="#disclaimer">Disclaimer</a>
+
+    <div id="disclaimer" class="disclaimer-message">
+      Alle Inhalte und Bilder sind, soweit nicht gesondert vermerkt, Eigentum von "il gusto - Italienische Spezialitäten" und sind in ihrer Gesamtheit ebenso wie in Teilen durch das Urheberrecht geschützt.
+      Die Informationen auf unserer Webseite wurden sorgfältig zusammengestellt, dennoch übernimmt "il gusto - Italienische Spezialitäten" keine Haftung für die Richtigkeit, Vollständigkeit und Aktualität der Informationen. Für Inhalte, die über einen Link zu einer anderen Website in einem eigenen Fenster geöffnet werden, übernimmt "il gusto - Italienische Spezialitäten" keinerlei Haftung.
+    </div>
+    <div class="impressum">
+      built by biotop <a href="http://biotop.github.io/simplesite/"> <img class="logo_biotop" src="images/biotop_logo.png"></a>
+    </div>
+
   </div>
 </footer>
