--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -109,6 +109,8 @@
     padding-bottom: 3px;
     background-color: $grey-color-dark;
     border: 1px solid $grey-color-light;
+    border-bottom: none;
+    border-top: none;
     flex-grow: 1;
     flex-shrink: 1;
     display: flex;
@@ -116,7 +118,7 @@
     justify-content: center;
     text-align: center;
     font-size: 12px;
-    font-size: 5vw;
+    font-size: 4vw;
 
     &:hover {
         text-decoration: none;
@@ -305,7 +307,7 @@
     //border: 2px solid lightblue;
     visibility: visible;
     height: auto;
-    width: auto;
+    width: 100vh;
   }
 
   .chevron-flexbox-parent {
@@ -350,7 +352,7 @@
 
 .oeffnungszeiten-flexbox-parent {
   //border: 5px solid blue;
-  max-width: 80vh;
+  max-width: 100vw;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -358,9 +360,10 @@
   justify-content: center;
 }
 
-.overlay-text {
+.oeffnungszeiten-flexbox-item {
   //border: 2px solid lightblue;
   width: 380px;
+  max-width: 100vw;
   position: relative;
   z-index: 2;
   background: rgba(250,250,250,1);
@@ -380,15 +383,19 @@
     //border: 1px solid purple;
     padding-top: 0;
     padding-bottom: 10px;
+    background-color: rgba(240,240,240,1);
   }
-  .overlay-text {
-    //border: 2px solid lightblue;
-    width: 340px;
+
+  .oeffnungszeiten-flexbox-parent{
+    padding-left: 0;
+  }
+  .oeffnungszeiten-flexbox-item{
+    background-color: rgba(240,240,240,1);
   }
   .overlay-text-list {
-    //border: 2px solid lightblue;
-    font-size: 20px;
-    font-size: 4vw;
+    //border: 2px solid red;
+    font-size: 18px;
+    font-size: 5vw;
     list-style: none;
   }
 }
@@ -513,7 +520,7 @@
  */
 
 #gallery{
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   height: auto;
   padding-top: 50px;
   padding-bottom: 80px;
@@ -525,7 +532,7 @@
 }
 
 .gallery-flexbox-parent {
-  border: 5px solid red;
+  //border: 5px solid red;
   margin-left: auto;
   margin-right: auto;
   max-width: 1500px;
@@ -535,7 +542,7 @@
 }
 
 .gallery-flexbox-item{
-  border: 5px solid blue;
+  //border: 5px solid blue;
   width: 480px;
   height: 270px;
   margin: 10px;
@@ -544,7 +551,7 @@
 }
 
 .galleryimage {
-	border: 2px solid lightblue;
+	//border: 2px solid lightblue;
   width: auto;
   z-index: 1;
 
@@ -556,7 +563,7 @@
 }
 
 .gallery-image-title {
-  border: 2px solid lightblue;
+  //border: 2px solid lightblue;
   width: 400px;
   z-index: 2;
 	bottom: 0;
@@ -586,8 +593,8 @@
 // when the screen becomes mobilephonesize, do this:
 @media screen and (max-width: $on-palm) {
   #gallery{
-    border: 2px solid lightblue;
-    padding-top: 10px;
+    //border: 2px solid lightblue;
+    padding-top: 0;
     padding-bottom: 10px;
     background-color: white;
   }
@@ -605,6 +612,7 @@
     display: none;
   }
   .gallery-flexbox-item{
+    pointer-events: none;
     border: 5px solid blue;
     margin: 0;
     width: auto;
@@ -618,23 +626,25 @@
     z-index: 1;
     padding: 0;
   	transform: translate3d(0, 0, 0);
+
   }
 
   .gallery-image-title {
     border: 2px solid lightblue;
+    opacity: 1;
+    background-color: green;
     width: 400px;
-    z-index: 2;
+    z-index: 3;
   	bottom: 0;
   	margin: 0;
   	padding: 1em;
   	color: white;
   	font-size: 1.2em;
   	line-height: 1;
-    transform: translate3d(3%,-100%, 0);
-  }
-
-
-
+    transform: translate3d(0,0,0);
+    text-align: center;
+    }
+    
 
 }
 /**
@@ -689,12 +699,46 @@
 
 }
 
-.image_container {
+.map_image_container {
   max-width: 800px;
-  padding: 0;
-  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.impressum-wrapper{
+  //border: 2px solid green;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  text-align: center;
+}
+
+.disclaimer-message{
+  display: none;
+}
+
+.disclaimer-link{
+  font-size: 18px;
+
+}
+
+.disclaimer-message:target{
+  display: block;
+  text-align: justify;
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+.impressum{
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 12px;
+}
+.logo_biotop{
+  width: 50px;
+}
 
 @include media-query($on-palm) {
     .site-footer {
@@ -705,7 +749,10 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+    }
 
+    .map_image_container {
+      width: 100vw;
     }
 }
 
