fixed gallery for mobile view

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -91,7 +91,7 @@
     //border: 2px solid green;
     position: fixed;
     bottom: 0;
-    z-index: 3;
+    z-index: 5;
     width: 100vw;
     height: auto;
   }
@@ -543,8 +543,8 @@
 
 .gallery-flexbox-item{
   //border: 5px solid blue;
-  width: 480px;
-  height: 270px;
+  max-width: 480px;
+  max-height: 270px;
   margin: 10px;
   overflow: hidden;
 
@@ -611,40 +611,57 @@
   .gallery-flexbox-item:nth-child(9) {
     display: none;
   }
-  .gallery-flexbox-item{
-    pointer-events: none;
-    border: 5px solid blue;
-    margin: 0;
-    width: auto;
+  .gallery-flexbox-parent{
+    margin: auto;
+  }
+  .gallery-flexbox-parent{
+    width: 100vw;
     height: auto;
-    overflow: hidden;
+    display: block;
+  }
+  .gallery-flexbox-item{
+    //border: 5px solid blue;
+    pointer-events: none;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    max-width:600px;
+    padding: 0;
+    width: auto;
+    height: 50vw;
+
   }
 
   .galleryimage {
-  	border: 2px solid lightblue;
+  	//border: 2px solid lightblue;
+    position: absolute;
+    top: 0px;
+    left: 0px;
     width: auto;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 1;
-    padding: 0;
   	transform: translate3d(0, 0, 0);
 
   }
 
   .gallery-image-title {
-    border: 2px solid lightblue;
+    //border: 2px solid red;
+    position: absolute;
     opacity: 1;
-    background-color: green;
-    width: 400px;
-    z-index: 3;
-  	bottom: 0;
-  	margin: 0;
-  	padding: 1em;
+    max-width: 340px;
+    padding-left: auto;
+    padding-right: auto;
+    z-index: 2;
   	color: white;
-  	font-size: 1.2em;
-  	line-height: 1;
+  	font-size: 5vw;
+  	max-height: 100%;
+    width: 100vw;
     transform: translate3d(0,0,0);
-    text-align: center;
+    text-align: left;
     }
-    
+
 
 }
 /**
