added padding to disclaimer for mobile view

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -771,6 +771,11 @@
     .map_image_container {
       width: 100vw;
     }
+
+    .impressum-wrapper{
+      //border: 2px solid green;
+      padding: 30px;
+    }
 }
 
 
