changed biotop link to biotop.co

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
       Die Informationen auf unserer Webseite wurden sorgfältig zusammengestellt, dennoch übernimmt "il gusto - Italienische Spezialitäten" keine Haftung für die Richtigkeit, Vollständigkeit und Aktualität der Informationen. Für Inhalte, die über einen Link zu einer anderen Website in einem eigenen Fenster geöffnet werden, übernimmt "il gusto - Italienische Spezialitäten" keinerlei Haftung.
     </div>
     <div class="impressum">
-      built by biotop <br><a href="http://biotop.github.io/simplesite/"> <img class="logo_biotop" src="images/biotop_logo.png"></a>
+      built by biotop <br><a href="http://biotop.co"> <img class="logo_biotop" src="images/biotop_logo.png"></a>
     </div>
 
   </div>
