--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,11 +66,21 @@
 
   <div class="impressum-wrapper">
 
-    <a class="disclaimer-link" href="#disclaimer">Disclaimer</a>
+    <a class="disclaimer-link" href="#disclaimer">Disclaimer/Datenschutzerklärung</a>
 
     <div id="disclaimer" class="disclaimer-message">
       Alle Inhalte und Bilder sind, soweit nicht gesondert vermerkt, Eigentum von "il gusto - Italienische Spezialitäten" und sind in ihrer Gesamtheit ebenso wie in Teilen durch das Urheberrecht geschützt.
       Die Informationen auf unserer Webseite wurden sorgfältig zusammengestellt, dennoch übernimmt "il gusto - Italienische Spezialitäten" keine Haftung für die Richtigkeit, Vollständigkeit und Aktualität der Informationen. Für Inhalte, die über einen Link zu einer anderen Website in einem eigenen Fenster geöffnet werden, übernimmt "il gusto - Italienische Spezialitäten" keinerlei Haftung.
+      <p></p>
+      Wir verarbeiten Ihre Daten ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TKG 2003). In dieser Datenschutzinformation informieren wir Sie über die wichtigsten Aspekte der Datenverarbeitung im Rahmen unserer Webseite:<br>
+      <p></p>
+      Auf unserer Webseite werden derzeit keine personenbezogenen Daten gespeichert. Cookies, andere Tracking Tools, sowie Funktionen des Webanalysedienstes Google Analytics (Fa. Google) kommen auf unserer Internetseite nicht zum Einsatz.<br>
+      <p></p>
+      Wenn Sie auf den Link zu unserer Facebook-Seite klicken, wird eine direkte Verbindung zwischen Ihrem Browser und dem Facebook-Server hergestellt. Facebook erhält möglicherweise dadurch die Information, dass Sie mit Ihrer IP-Adresse unsere Website besucht haben. Wir weisen darauf hin, dass wir keine Kenntnis vom Inhalt der übermittelten Daten sowie deren Nutzung durch Facebook erhalten. Weitere Informationen hierzu finden Sie in der Datenschutzerklärung von Facebook unter de-de.facebook.com/policy.php.<br>
+      <p></p>
+      Wir behalten uns das Recht vor, diese Datenschutzerklärung jederzeit mit Wirkung für die Zukunft zu ändern. Eine jeweils aktuelle Version ist auf der Website verfügbar. Änderungen werden wir auf dieser Website bekanntgeben.
+      Sollten Sie weitere Fragen, Kommentare oder Anfragen bezüglich der Erhebung, Verarbeitung und Nutzung Ihrer personenbezogenen Daten durch uns haben, sowie bei sonstigen Fragen oder Hinweisen in Bezug auf diese Datenschutzerklärung, wenden Sie sich bitte an uns unter den angegebenen Kontaktdaten..
+      Verantwortlicher: Vincenzo Cipolletta, Mautweg 7, 9232 Rosegg<br>
     </div>
     <div class="impressum">
       built by biotop <br><a href="http://biotop.co"> <img class="logo_biotop" src="images/biotop_logo.png"></a>
